ui improvements for vulnerabilities path

--- a/deepfence_ui/app/styles/_new-base.scss
+++ b/deepfence_ui/app/styles/_new-base.scss
@@ -4356,6 +4356,11 @@ input {
       margin-left: 100px;
       text-align: left;
     }
+    .vlun-path-no-data {
+      margin-top: 100px;
+      margin-left: 100px;
+      text-align: left;
+    }
   }
 
   .tabs-collection {
