--- a/deepfence_ui/app/styles/cve/styles.scss
+++ b/deepfence_ui/app/styles/cve/styles.scss
@@ -154,10 +154,11 @@
           display: flex;
 
           .chart-container {
-            width: 50%;
-            padding: 40px;
+            flex: 1;
+            display: flex;
             align-items: center;
             justify-content: center;
+            margin: 30px 0px;
 
             .empty-data{
               display: flex;
