add nodes details vulnerabilities template

--- a/deepfence_worker/tasks/reports/templates/base.gohtml
+++ b/deepfence_worker/tasks/reports/templates/base.gohtml
@@ -260,9 +260,10 @@
 </head>
 
 <body>
-  {{template "header" .}}
-  {{template "applied_filters" .}}
-  {{template "vulnerabilities-summary" .}}
+  {{ template "header" . }}
+  {{ template "applied_filters" . }}
+  {{ template "vulnerabilities-summary-table" . }}
+  {{ template "vulnerabilities-nodes-table" . }}
   <!-- {% block content %}
     <div class="content">
     </div>
