--- a/deepfence_worker/tasks/reports/templates/vulnerabilities_summary_table.gohtml
+++ b/deepfence_worker/tasks/reports/templates/vulnerabilities_summary_table.gohtml
@@ -1,4 +1,4 @@
-{{define "vulnerabilities-summary"}}
+{{define "vulnerabilities-summary-table"}}
 <h3>Summary</h3>
 <div class="summary-report-table" style="width: 100%;">
     <table style="table-layout: fixed; word-break: break-all;">
