--- a/deepfence_worker/tasks/reports/templates/applied_filters.gohtml
+++ b/deepfence_worker/tasks/reports/templates/applied_filters.gohtml
@@ -1,4 +1,4 @@
-{{define "applied_filters"}}
+{{define "applied-filters"}}
 <h4>Applied filters</h4>
 <div class="summary-report-table" style="width: 100%;">
     <table style="table-layout: fixed; word-break: break-word;">
