--- a/deepfence_worker/tasks/reports/templates/summary_table.gohtml
+++ b/deepfence_worker/tasks/reports/templates/summary_table.gohtml
@@ -1,4 +1,4 @@
-{{define "vulnerabilities-summary-table"}}
+{{define "summary-table"}}
 <h3>Summary</h3>
 <div class="summary-report-table" style="width: 100%;">
     <table style="table-layout: fixed; word-break: break-all;">
@@ -10,14 +10,14 @@
             <th style="background: #0576c9; color: white;">low</th>
             <th>Total</th>
         </tr>
-        {{ range $key, $value := .NodeWiseSeverityCountData.NodeSeverityCount }}
+        {{ range $key, $value := .NodeWiseData.SeverityCount }}
         <tr>
             <td style="width: 400px;"><a href="#{{$key}}">{{$key}}</a></td>
-            <td>{{ $value.critical }}</td>
-            <td>{{ $value.high }}</td>
-            <td>{{ $value.medium }}</td>
-            <td>{{ $value.low }}</td>
-            <td>{{ $value.total }}</td>
+            <td>{{ default 0 $value.critical }}</td>
+            <td>{{ default 0 $value.high }}</td>
+            <td>{{ default 0 $value.medium }}</td>
+            <td>{{ default 0 $value.low }}</td>
+            <td>{{ add $value.critical $value.high $value.medium $value.low }}</td>
         </tr>
         {{ end }}
     </table>
